--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,11 +37,11 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
+    ${file.reference.jogg-0.0.7.jar}:\
+    ${file.reference.jorbis-0.0.15.jar}:\
     ${file.reference.lwjgl.jar}:\
     ${file.reference.lwjgl_util.jar}:\
-    ${file.reference.slick.jar}:\
-    ${file.reference.jogg-0.0.7.jar}:\
-    ${file.reference.jorbis-0.0.15.jar}
+    ${file.reference.slick.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
